# verbiste-wasm

./: .gitignore  CLAUDE.md  CLAUDE.org  Makefile  README.md  README.org  SETUP.org  deps.sh  issues.md  make_executable.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
resources/verbiste-0.1.49/: LISEZMOI  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  configure  configure.ac  verbiste.spec
resources/verbiste-0.1.49/examples/: Makefile.am  Makefile.in
resources/verbiste-0.1.49/macros/: Makefile.am  Makefile.in
resources/verbiste-0.1.49/po/: LINGUAS  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  fr.gmo  fr.po  it.gmo  it.po  verbiste.pot
resources/verbiste-0.1.49/src/: Makefile.in
resources/verbiste-0.1.49/src/commands/: Command.cpp  Command.h  Makefile.am  Makefile.in  french-conjugator.cpp  french-deconjugator.cpp
resources/verbiste-0.1.49/src/gnome/: Makefile.am  Makefile.in
resources/verbiste-0.1.49/src/gtk/: Makefile.am  Makefile.in  main-window.cpp
resources/verbiste-0.1.49/src/gui/: Makefile.am  Makefile.in
resources/verbiste-0.1.49/src/mate/: Makefile.am  Makefile.in
resources/verbiste-0.1.49/src/verbiste/: FrenchVerbDictionary.cpp  FrenchVerbDictionary.h  Makefile.am  Makefile.in  Trie.h
verbiste-trie-rs/: Cargo.toml  README.md  build.sh  setup.sh
verbiste-trie-rs/src/: lib.rs
verbiste-trie-rs/www/: index.html
verbiste-wasm/: Makefile  README.md  build.sh  serve.sh  setup.sh
verbiste-wasm/src/: french_verb_adapter.cpp  trie_wrapper.cpp
verbiste-wasm/templates/: french-verbs.js.template
